--- a/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.html
+++ b/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.html
@@ -1,4 +1,4 @@
-<div class="row container">
+<div class="row container" (click)="openEditDialog()">
     <div class="col-2 delete-container" *ngIf="deleteMode">
         <button class="delete-button faded-text" (click)="delete()"><fa-icon [icon]="trash"></fa-icon></button>
     </div>
@@ -20,6 +20,6 @@
         <button class="delete-button" (click)="delete()"><fa-icon [icon]="trash"></fa-icon></button>
     </div> -->
     <div class="col-4 toggler-container" *ngIf="!deleteMode">
-        <mat-slide-toggle [(ngModel)]="item.enabled" (change)="enabledChanged.emit()"></mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="item.enabled" (click)="$event.stopPropagation();" (change)="enabledChanged.emit()"></mat-slide-toggle>
     </div>
 </div>
