--- a/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.css
@@ -57,7 +57,7 @@ body {
     height: 60px;
     border-radius: 30px;
     font-size: 18px;
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.8);
     /* width: 8vh;
     height: 8vh;
     border-radius: 4vh;
@@ -99,8 +99,9 @@ body {
     margin: 0 auto;
     margin-top: 10px;
     text-align: center;
-    font-family: 'Roboto';
-    letter-spacing: 1px;
+    /* font-family: 'Roboto';
+    letter-spacing: 1px; */
+    /* font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; */
     color: rgb(240, 240, 240);
 }
 
