--- a/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
@@ -17,6 +17,12 @@ button:focus {
     padding-right: 0;
 }
 
+@media (max-width: 576px) {
+    .container {
+        padding-right: 15px;
+    }
+}
+
 .controls-container {
     display: flex;
     justify-content: flex-end;
