Create scheduling backend logic

--- a/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.html
+++ b/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.html
@@ -1,9 +1,10 @@
 <div class="row container" (click)="openEditDialog()">
     <div class="col-2 delete-container" *ngIf="deleteMode">
-        <button class="delete-button faded-text" (click)="delete()"><fa-icon [icon]="trash"></fa-icon></button>
+        <button class="delete-button faded-text" (click)="$event.stopPropagation(); delete()"><fa-icon [icon]="trash"></fa-icon></button>
     </div>
     <div class="col-4 title-container">
-        <h3 class="title" [ngClass]="item?.enabled ? 'black-text' : 'faded-text'">{{ item?.time | date: 'HH:mm' }}</h3>
+        <!-- {{ item?.time | date: 'HH:mm' }} -->
+        <h3 class="title" [ngClass]="item?.enabled ? 'black-text' : 'faded-text'">{{ item?.time.split(':')[0] + ':' + item?.time.split(':')[1] }}</h3>
     </div>
     <div class="col-4 amount-container">
         <fa-icon class="amount-dot" [ngClass]="item?.enabled ? 'black-text' : 'faded-text'" [icon]="circles[0]"></fa-icon>
@@ -20,6 +21,6 @@
         <button class="delete-button" (click)="delete()"><fa-icon [icon]="trash"></fa-icon></button>
     </div> -->
     <div class="col-4 toggler-container" *ngIf="!deleteMode">
-        <mat-slide-toggle [(ngModel)]="item.enabled" (click)="$event.stopPropagation();" (change)="enabledChanged.emit()"></mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="item.enabled" (click)="$event.stopPropagation();" (change)="enable()"></mat-slide-toggle>
     </div>
 </div>
