--- a/Frontend/automatic-feeder-app/src/app/dialogs/create-schedule-dialog/create-schedule-dialog.component.html
+++ b/Frontend/automatic-feeder-app/src/app/dialogs/create-schedule-dialog/create-schedule-dialog.component.html
@@ -65,7 +65,7 @@
 </div>
 <div class="row button-container">
     <div class="col-6">
-        <button class="submit-button">{{submitButtonText}}</button>
+        <button class="submit-button" (click)="create()">{{submitButtonText}}</button>
     </div>
     <div class="col-6">
         <button class="cancel-button" (click)="cancel()">Cancel</button>
