--- a/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <button class="feed-button">
-        <fa-icon class="feed-button-icon" [icon]="faFish" matTooltip="Feed manually"
+        <fa-icon class="feed-button-icon" [icon]="faFish" matTooltip="Feed manually" (click)="manualFeeding()"
         [matTooltipShowDelay]="1000"></fa-icon>
     </button>
 </div>
