--- a/Frontend/automatic-feeder-app/src/app/pages/about-page/about-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/about-page/about-page.component.html
@@ -1,1 +1,60 @@
-<p>about-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12 title-container">
+            <h2>About</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 mb-3 mb-md-0">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fas fa-envelope text-primary mb-2"></i>
+                <h4 class="text-uppercase m-0">Author</h4>
+                <hr class="my-4">
+                <div class="small text-black-50">
+                  Stefan Mirilović
+                  <br>RA60/2016
+                  <br><a href="mailto:stefan.mirilovic@uns.ac.rs">stefan.mirilovic@uns.ac.rs</a>
+                  <div class="col-md-12">
+                    <ul class="list-inline social-buttons">
+                      <li class="list-inline-item">
+                        <a href="https://www.facebook.com/people/Stefan-Mirilovic/100011374468121">
+                            <fa-icon [icon]="fb"></fa-icon>
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="https://rs.linkedin.com/in/stefan-mirilović-4507ab191">
+                            <fa-icon [icon]="linkedin"></fa-icon>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <div class="col-md-6 mb-3 mb-md-0">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                <h4 class="text-uppercase m-0">Mentor</h4>
+                <hr class="my-4">
+                <div class="small text-black-50">
+                    prof. dr Milan Vidaković
+                    <br><a href="mailto:stefan.mirilovic@uns.ac.rs">minja@uns.ac.rs</a>
+                    <div class="col-md-12">
+                        <ul class="list-inline social-buttons">
+                          <li class="list-inline-item">
+                            <a href="https://twitter.com/mvidakovicftn">
+                                <fa-icon [icon]="twitter"></fa-icon>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+</div>
