Logic for rotating motor

--- a/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.html
+++ b/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.html
@@ -1,6 +1,6 @@
 <div class="row container" (click)="openEditDialog()">
     <div class="col-2 delete-container" *ngIf="deleteMode">
-        <button class="delete-button faded-text" (click)="$event.stopPropagation(); delete()"><fa-icon [icon]="trash"></fa-icon></button>
+        <button class="delete-button faded-text" (click)="$event.stopPropagation(); delete()" [disabled]="loading"><fa-icon [icon]="trash"></fa-icon></button>
     </div>
     <div class="col-4 title-container">
         <!-- {{ item?.time | date: 'HH:mm' }} -->
@@ -21,6 +21,6 @@
         <button class="delete-button" (click)="delete()"><fa-icon [icon]="trash"></fa-icon></button>
     </div> -->
     <div class="col-4 toggler-container" *ngIf="!deleteMode">
-        <mat-slide-toggle [(ngModel)]="item.enabled" (click)="$event.stopPropagation();" (change)="enable()"></mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="item.enabled" (click)="$event.stopPropagation();" (change)="enable()" [disabled]="loading"></mat-slide-toggle>
     </div>
 </div>
