--- a/Frontend/automatic-feeder-app/src/app/dialogs/create-schedule-dialog/create-schedule-dialog.component.css
+++ b/Frontend/automatic-feeder-app/src/app/dialogs/create-schedule-dialog/create-schedule-dialog.component.css
@@ -142,7 +142,11 @@ button:focus {
     transition: all 0.2s ease-in;
 }
 
-.submit-button:hover {
+.submit-button:disabled {
+    background-color: lightgray;
+}
+
+.submit-button:hover:not(:disabled) {
     background-color: #89d65d;
 }
 
