--- a/Frontend/automatic-feeder-app/src/app/dialogs/create-schedule-dialog/create-schedule-dialog.component.html
+++ b/Frontend/automatic-feeder-app/src/app/dialogs/create-schedule-dialog/create-schedule-dialog.component.html
@@ -65,9 +65,9 @@
 </div>
 <div class="row button-container">
     <div class="col-6">
-        <button class="submit-button" (click)="create()">{{submitButtonText}}</button>
+        <button class="submit-button" (click)="create()" [disabled]="loading">{{submitButtonText}}</button>
     </div>
     <div class="col-6">
-        <button class="cancel-button" (click)="cancel()">Cancel</button>
+        <button class="cancel-button" (click)="cancel()" [disabled]="loading">Cancel</button>
     </div>
 </div>
